some CSS fixes on mobile SIMACC

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -88,6 +88,7 @@ a
 		height auto
 		overflow hidden
 		padding 10px
+		min-height 90px
 		.name
 			text-align center
 			font-weight bold
